--- a/index.html
+++ b/index.html
@@ -461,6 +461,11 @@
                 category: "winter",
                 text: "Моё дело — улыбаться,\nМоё дело — потакать.\nВаше дело — притворяться,\nЧто не хотите умирать.\n\nЧто не хочется до дрожи\nНи спасенья, ни суда,\nЧто отчаянье под кожей —\nТолько привкус, не беда.\n\nИ я поверю вам отчасти:\nВедь каждый каждому тут брат,\nКто видел боль, кто видел счастье,\nИ всё равно — не виноват.\n\nЯ верю каждому, кто любит,\nКто хоть раз пытался — вслух,\nКто себя на части рубит,\nЧтоб испустить зловонный дух.\n\nКто ночами держит сердце,\nКак горячий уголёк,\nИ не может отогреться,\nИ устал — но не отрёк.\n\nКто хотел бы стать жестоким,\nЧтобы больше не болеть,\nНо остался одиноким,\nПопытался умереть.\n\nИ вы делаете вид, что живы,\nЯ — что верю в этот свет.\nМы не злые. Мы — разбиты.\nИ других путей тут нет"
             },
+            {
+                title: "Знаменитые русские три слова",
+                category: "winter",
+                text: "Знаменитые русские три слова:\n«Что мне делать?» или «Как мне быть?»\nНе дают моей душе покоя,\nНе дают мне просто жить.\n\nКуда лететь — да кто ответит?\nА может, стоит всё забыть?\nА может, жизнь нас не калечит, \nА просто учит нас любить?\n\nА ведь каждый из нас — птица,\nПтица, выбравшая простор,\nТолько душу запираем\nСнова в клетку, на запор.\n\nИ мы молчим, когда бы надо\nГромко крикнуть: «Хватит, стой!»\nИ живём, как будто правда\nЭтот мир — нам не родной.\n\nНет, не могу я больше жить.\nСмириться с жизнью я не в силах.\nЯ не хочу её любить,\nХочу забыться на могилах.\n\nЯ устал от слов «держись»,\nИ от советов и от жалости.\nЯ хочу сорваться вниз,\nЧтоб не думать, не осталось бы\n\nНи надежды, ни огня,\nНи себя — в чужом лице.\nМрачной ночью сентября\nПусто где-то в глубине.\n\nВнутри — пустая полынья.\nИ холод — будто навсегда.\nЯ хочу, чтоб всё исчезло,\nЧтобы боль ушла туда.\n\nЧтобы стало тише, тише,\nЧтобы мир меня не звал.\nЧтобы я себя не слышал.\nЧтобы я не существовал.\n\nНо даже если я кричу\nВ темноту: «Не надо, хватит!» —\nЯ зачем-то всё дышу.\nЯ живу. И это — \nправда."
+            },
         ];
 
         function createParticles() {
