--- a/index.html
+++ b/index.html
@@ -154,11 +154,6 @@
     <script>
         const poems = [
             {
-                title: "Знаменитые русские три слова",
-                category: "winter",
-                text: "Знаменитые русские три слова:\n«Что мне делать?» или «Как мне быть?»\nНе дают моей душе покоя,\nНе дают мне просто жить.\n\nКуда лететь — да кто ответит?\nА может, стоит всё забыть?\nА может, жизнь нас не калечит,\nА просто учит нас любить?\n\nА ведь каждый из нас — птица,\nПтица, выбравшая простор,\nТолько душу запираем\nСнова в клетку, на запор.\n\nИ мы молчим, когда бы надо\nГромко крикнуть: «Хватит, стой!»\nИ живём, как будто правда\nЭтот мир — нам не родной.\n\nНет, не могу я больше жить.\nСмириться с жизнью я не в силах.\nЯ не хочу её любить,\nХочу забыться на могилах.\n\nЯ устал от слов «держись»,\nИ от советов и от жалости.\nЯ хочу сорваться вниз,\nЧтоб не думать, не осталось бы\n\nНи надежды, ни огня,\nНи себя — в чужом лице.\nМрачной ночью сентября\nПусто где-то в глубине.\n\nВнутри — пустая полынья.\nИ холод — будто навсегда.\nЯ хочу, чтоб всё исчезло,\nЧтобы боль ушла туда.\n\nЧтобы стало тише, тише,\nЧтобы мир меня не звал.\nЧтобы я себя не слышал.\nЧтобы я не существовал.\n\nНо даже если я кричу\nВ темноту: «Не надо, хватит!» —\nЯ зачем-то всё дышу.\nЯ живу. И это —\nправда."
-            },
-            {
                 title: "Смирительная рубашка",
                 category: "summer",
                 text: "В смирительной рубашке\nДожидаюсь я тебя.\nТы сделала мне больно,\nПокинула меня.\n\nПокинула ты молча,\nНе написав письмо,\nЗабыв про мои чувства,\nЗабыв и про любовь.\n\nЗастыло сердце без движенья,\nУходит жизнь, уходит прочь.\nЯ помню наши дни влюбленья,\nНо память боль приносит вновь.\n\nВ смирительной рубашке грусти,\nЗакрыв глаза от всех обид,\nВерю, снова буду счастлив,\nЧто вернёшься, сердце ждёт и верит."
@@ -237,6 +232,16 @@
                 title: "С юмористическим окрасом",
                 category: "winter",
                 text: "Тепло, уют мозги ебут,\nТак вот зачем живу я тут.\nПусть дни бегут, часы молчат,\nИ жизнь течёт, как тихий взгляд.\n\nЗдесь тихо, мягко, мир хорош\nС юмористическим окрасом.\nЯ в мире том, где каждый грош\nСчитает важным, даже часом.\n\nГде каждый миг - судьбы каприз,\nГде каждый звук - дыханье ветра,\nГде ты летишь, как птица, вниз,\nЧтоб выше быть на сантиметры.\n\nГде люди - братья, где друзья —\nСмешные, милые созданья.\nГде ты живёшь не для себя,\nА ради их существованья.\n\nГде все мы - добрые, и ты —\nЛишь часть большого океана.\nГде все исполнятся мечты,\nИ все твои исчезнут раны.\n\nЗдесь тихо, мягко, мир хорош\nС юмористическим окрасом.\nЗдесь ты всегда себя найдёшь,\nНе потерявшись в мире массы."
+            },
+            {
+                title: "Скажи мне честно",
+                category: "winter",
+                text: "Скажи мне честно —\nзачем ты дышишь?\nТы знаешь место,\nгде нас услышат?\n\nСкажи мне честно —\nзачем ты держишься?\nВ петле не тесно?\nНу что, всё вертишься?\n\nСкажи мне честно —\nзачем ты веришь?\nЛюбовь не лечит.\nТы это мерил?\n\nСкажи мне честно —\nзачем ты любишь?\nТы каждый раз же\nсебя же губишь.\n\nСкажи мне честно —\nзачем ты плачешь?\nВ земле не тесно.\nТам все лежачие.\n\nСкажи мне честно —\nзачем ты слышишь?\nОтвет известен:\nты просто дышишь."
+            },
+                        {
+                title: "Знаменитые русские три слова",
+                category: "winter",
+                text: "Знаменитые русские три слова:\n«Что мне делать?» или «Как мне быть?»\nНе дают моей душе покоя,\nНе дают мне просто жить.\n\nКуда лететь — да кто ответит?\nА может, стоит всё забыть?\nА может, жизнь нас не калечит,\nА просто учит нас любить?\n\nА ведь каждый из нас — птица,\nПтица, выбравшая простор,\nТолько душу запираем\nСнова в клетку, на запор.\n\nИ мы молчим, когда бы надо\nГромко крикнуть: «Хватит, стой!»\nИ живём, как будто правда\nЭтот мир — нам не родной.\n\nНет, не могу я больше жить.\nСмириться с жизнью я не в силах.\nЯ не хочу её любить,\nХочу забыться на могилах.\n\nЯ устал от слов «держись»,\nИ от советов и от жалости.\nЯ хочу сорваться вниз,\nЧтоб не думать, не осталось бы\n\nНи надежды, ни огня,\nНи себя — в чужом лице.\nМрачной ночью сентября\nПусто где-то в глубине.\n\nВнутри — пустая полынья.\nИ холод — будто навсегда.\nЯ хочу, чтоб всё исчезло,\nЧтобы боль ушла туда.\n\nЧтобы стало тише, тише,\nЧтобы мир меня не звал.\nЧтобы я себя не слышал.\nЧтобы я не существовал.\n\nНо даже если я кричу\nВ темноту: «Не надо, хватит!» —\nЯ зачем-то всё дышу.\nЯ живу. И это —\nправда."
             }
         ];
 
